--- a/index.html
+++ b/index.html
@@ -15,5 +15,51 @@
         <a href="">header link three</a>
       </nav>
     </div>
+
+    <div class="info">
+      <div class="info-left">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button>Sign up</button>
+      </div>
+      <div class="info-right">
+        <img src="/images/" alt="Image placeholder">
+      </div>
+    </div>
+
+    <div class="random">
+      <h2>Some random info</h2>
+      <div class="first">
+        <img src="images/" alt="Image placeholder">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="second">
+        <img src="images/" alt="Image placeholder">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="third">
+        <img src="images/" alt="Image placeholder">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="fourth">
+        <img src="images/" alt="Image placeholder">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+    </div>
+
+    <div class="quote">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+
+    <div class="bigbutton">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button over there!</p>
+        <button>Sign up</button>
+    </div>
+
+    <div class="footer">
+        <div class="footer-text">Copyright © Miguel Debavelaere</div>
+    </div>
 </body>
 </html>
