--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="header">
-      <div class="logo">Header Logo</div>
-      <nav>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
-      </nav>
+        <div class="logo">Header Logo</div>
+        <nav>
+          <a href="">header link one</a>
+          <a href="">header link two</a>
+          <a href="">header link three</a>
+        </nav>
     </div>
 
     <div class="info">
@@ -59,7 +60,7 @@
     </div>
 
     <div class="footer">
-        <div class="footer-text">Copyright © Miguel Debavelaere</div>
+        <div class="footer-text">Webpage by Bave</div>
     </div>
 </body>
 </html>
