--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="info">
       <div class="info-left">
         <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
+        <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button class="infobutton">Sign up</button>
       </div>
       <div class="info-right">
-        <img src="/images/" alt="Image placeholder">
+        <img src="./images/portfolio.jpg" alt="Image placeholder">
       </div>
     </div>
 
