Some touch ups to html and css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button class="infobutton">Sign up</button>
       </div>
       <div class="info-right">
-        <img src="./images/portfolio.jpg" alt="Image placeholder">
+        <img class="portimg" src="./images/portfolio.jpg" alt="Image placeholder">
       </div>
     </div>
 
