fixed flexbox design

--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <nav>
-          <a href="">header link one</a>
-          <a href="">header link two</a>
-          <a href="">header link three</a>
-        </nav>
+    <div class="dark-bg-container">
+      <div class="container">
+        <div class="head-item-left"><a href="">Header logo</a></div>
+        <div class="head-item-right">
+          <ul>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
 
-    <div class="info">
-      <div class="info-left">
-        <h1>This website is awesome</h1>
-        <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button class="infobutton">Sign up</button>
-      </div>
-      <div class="info-right">
-        <img class="portimg" src="./images/portfolio.jpg" alt="Image placeholder">
+    <div class="dark-bg-container">
+      <div class="container">
+        <div class="info-left">
+          <h1>This website is awesome</h1>
+          <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button class="infobutton">Sign up</button>
+        </div>
+        <div class="info-right">
+          <img class="portimg" src="./images/portfolio.jpg" alt="Image placeholder">
+        </div>
       </div>
     </div>
 
