finished image section without illustrations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="dark-bg-container">
-      <div class="container">
+      <div class="container main">
         <div class="info-left">
           <h1>This website is awesome</h1>
           <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
@@ -34,23 +34,29 @@
       </div>
     </div>
 
-    <div class="random">
-      <h2>Some random info</h2>
-      <div class="first">
-        <img src="images/" alt="Image placeholder">
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="second">
-        <img src="images/" alt="Image placeholder">
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="third">
-        <img src="images/" alt="Image placeholder">
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="fourth">
-        <img src="images/" alt="Image placeholder">
-        <p>this is some subtext under an illustration or image</p>
+    <div class="light-bg-container">
+      <div class="container-info">
+        <div class="info-item">
+          <h2>Some random info</h2>
+        </div>
+        <div class="info-images">
+          <div class="first">
+            <img class="info-content" src="images/" alt="">
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="first">
+            <img class="info-content" src="images/" alt="">
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="first">
+            <img class="info-content" src="images/" alt="">
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        <div class="first">
+          <img class="info-content" src="images/" alt="">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        </div>
       </div>
     </div>
 
