touch ups and styling text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="dark-bg-container">
       <div class="container">
-        <div class="head-item-left"><a href="">Header logo</a></div>
+        <div class="head-item-left"><a href="logo">Header logo</a></div>
         <div class="head-item-right">
           <ul>
             <li><a href="">header link one</a></li>
@@ -70,15 +70,17 @@
         </div>
       </div>
     </div>
-
-    <div class="bigbutton">
+    <div>
+      <div class="bigbutton">
         <h3>Call to action! It's time!</h3>
         <p>Sign up for our product by clicking that button over there!</p>
         <button>Sign up</button>
+      </div>
     </div>
 
     <div class="footer">
         <div class="footer-text">Webpage by Bave</div>
+        <div class="footerextra">TheOdinProject</div>
     </div>
 </body>
 </html>
