finished the webpage

--- a/index.html
+++ b/index.html
@@ -70,11 +70,16 @@
         </div>
       </div>
     </div>
-    <div>
+
+    <div class="light-bg-container">
       <div class="bigbutton">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button over there!</p>
-        <button>Sign up</button>
+        <div class="button-left">
+          <h3>Call to action! It's time!</h3>
+          <p class="buttontext">Sign up for our product by clicking that button over there!</p>
+        </div>
+        <div class="button-right">
+          <button>Sign up</button>
+        </div>  
       </div>
     </div>
 
